New files added

--- a/Jinal/index.html
+++ b/Jinal/index.html
@@ -1,1 +1,18 @@
+<html>
+<head>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js">
 
+    </script>
+    <title>Assignment</title>
+</head>
+<body>
+
+<h1>Welcome.!</h1>
+<div>
+<a href="earlybirds.html">Early Birds</a>
+<a href="authentic.html">Authentic Cuisine</a>
+<a href="foodholic.html">Foodholics</a>
+</div>
+</body>
+</html>
