--- a/Masumi/index.html
+++ b/Masumi/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
 
+</head>
+<body>
+<header>
+    <h1>
+        Welcome !!!
+    </h1>
+</header>
+<a href="21st.html">21st Century Menu</a><br>
+<a href="90s.html">90s Menu</a><br>
+<a href="60s.html">60s menu</a>
+</body>
+<script defer src="script.js"></script>
+</html>
