--- a/Akansha/index.html
+++ b/Akansha/index.html
@@ -1,1 +1,11 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Food Menu</title>
+        <script src="script.js"></script>
+
+    </head>
+    <body>
+
+    </body>
+    </html>
